# rancher-cluster

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tfsec.yaml
ansible/: install_cli_tools.yaml  requirements.yaml
terraform/: .terraform.lock.hcl  backend.tf  dependencies.tf  main.tf  outputs.tf  terraform.tfvars  vars.tf  versions.tf
