[tool.poetry]
name = "rancher-cluster"
version = "0.1.0"
description = "Configure a Kubernetes cluster using rancher"
authors = ["Audun Nes <audun.nes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
